# text-to-sql-agent

./: .env.example  .gitignore  README.md
backend/: LANGGRAPH_DIAGRAM.md  README.md  pyproject.toml
backend/sample_data/: aws_sql_pairs.json  cloud_metadata.json  metadata.json  sql_pairs.json  system_rules.json  tag_sql_pairs.json
backend/src/text_to_sql/: __init__.py  main.py
backend/src/text_to_sql/agents/: __init__.py  graph.py  state.py  streaming.py
backend/src/text_to_sql/agents/nodes/: executor.py  responder.py  retrieval.py  sql_generator.py  tool_executor.py  validator.py
backend/src/text_to_sql/agents/tools/: exploration_tools.py  schema_tools.py  search_tools.py  (+1 more)
backend/src/text_to_sql/cli/: __init__.py
backend/src/text_to_sql/config/: settings.py
backend/src/text_to_sql/core/: __init__.py  exceptions.py  types.py
backend/src/text_to_sql/models/: data_sources.py  embeddings.py  requests.py  responses.py  training_data.py
backend/src/text_to_sql/services/: checkpointer.py  database.py  embedding.py  query_cache.py  sql_pair_candidates.py  suggestions.py  system_rules.py  vector_store.py
backend/src/text_to_sql/utils/: ddl_parser.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_checkpointer.py  test_clarification.py  test_csv_endpoint.py  test_database_service.py  test_ddl_parser.py  test_embeddings_api.py  test_exploration_tools.py  test_models.py  test_query_cache.py  test_sql_execution_tool.py  test_sql_generator.py  test_sql_pair_candidates.py  test_sql_validation.py  test_system_rules.py  test_tool_executor.py  test_training_data_api.py
(+77 files in other folders)
